project/logs/20250528_150509.log
Hello,DirectX!

clientSize:1280,720

Use Adapter:NVIDIA GeForce RTX 4060 Laptop GPU

Featurelevel : 12.2

Complete create D3D12Device!!!

Begin CompileShader, path:Object3D.VS.hlsl, profile:vs_6_0

Compile Succeeded, path:Object3D.VS.hlsl, profile:vs_6_0

Begin CompileShader, path:Object3D.PS.hlsl, profile:ps_6_0

Object3D.PS.hlsl:11:24: error: unknown type name 'VertexShaderOutput'; did you mean 'PixelShaderOutput'?
PixelShaderOutput main(VertexShaderOutput intput) {
                       ^~~~~~~~~~~~~~~~~~
                       PixelShaderOutput
Object3D.PS.hlsl:7:8: note: 'PixelShaderOutput' declared here
struct PixelShaderOutput {
       ^

